# arena360-debloater

./: README.md  generate_resources.py  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: protected.json
src-tauri/resources/presets/: profiles.yaml
src-tauri/resources/scripts/apps/: remove-clipchamp-apply.ps1  remove-clipchamp-detect.ps1  remove-copilot-app-apply.ps1  remove-copilot-app-detect.ps1  remove-dev-home-apply.ps1  remove-dev-home-detect.ps1  remove-get-help-apply.ps1  remove-get-help-detect.ps1  remove-groove-apply.ps1  remove-groove-detect.ps1  remove-news-apply.ps1  remove-news-detect.ps1  remove-office-hub-apply.ps1  remove-office-hub-detect.ps1  remove-onenote-apply.ps1  remove-onenote-detect.ps1  remove-outlook-apply.ps1  remove-outlook-detect.ps1  remove-outlook-revert.ps1  remove-phone-link-apply.ps1  remove-phone-link-detect.ps1  remove-skype-apply.ps1  (+13 more)
src-tauri/resources/tweaks/: apps.yaml  cleanup.yaml  gaming.yaml  performance.yaml  privacy.yaml  services.yaml  tasks.yaml  ui.yaml  windows_update.yaml
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: apply.rs  apps.rs  catalog.rs  elevation.rs  mod.rs  presets.rs  resource.rs  revert.rs  scan.rs
src-tauri/src/engine/: app_uninstaller.rs  catalog.rs  elevation.rs  error.rs  executor.rs  installed_app_scanner.rs  logger.rs  mod.rs  models.rs  paths.rs  powershell.rs  presets.rs  protected.rs  registry.rs  resource_remover.rs  resource_scanner.rs  reverter.rs  scanner.rs
(+144 files in other folders)
